css fixes to contrast text

--- a/resources/scss/components/form.scss
+++ b/resources/scss/components/form.scss
@@ -26,6 +26,11 @@
 		padding: 0 22.83px;
 	}
 }
+.textField {
+	textarea {
+		background: $bgSite;
+	}
+}
 .btSearchField {
 	height: 30.25px;
 	width: 30.25px;
