--- a/resources/scss/layouts/profile.scss
+++ b/resources/scss/layouts/profile.scss
@@ -27,7 +27,7 @@
 				transform: translate(-50%, -50%);
 				z-index: 0;
 			}
-			.dropzone::after {
+			&::after {
 				content: '';
 				display: block;
 				position: absolute;
