--- a/resources/scss/layouts/profileEdit.scss
+++ b/resources/scss/layouts/profileEdit.scss
@@ -20,6 +20,19 @@
 			}
 			.dropzone {
 				min-height: 415px;
+				.file-name {
+					display: none;
+				}
+			}
+			.dropzone::after {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				z-index: 10;
 			}
 		}
 		.photoProfile {
